--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
-    "basic-ftp": "^5.0.5"
+    "basic-ftp": "^5.0.3",
+    "csv-stringify": "^6.5.0"
   }
 }
+
